@@ -110,6 +110,10 @@ linkend="function-gobject--source-remove">gobject.source_remove</link></methodna
 	<methodname><link
 linkend="function-gobject--main-context-default">gobject.main_context_default</link></methodname>
 	<methodparam></methodparam>
+      </methodsynopsis><methodsynopsis language="python">
+	<methodname><link
+linkend="function-gobject--markup-escape-text">gobject.markup_escape_text</link></methodname>
+	<methodparam><parameter role="keyword">text</parameter></methodparam>
       </methodsynopsis></programlisting>
 
   </refsect1>
@@ -989,6 +993,42 @@ object</simpara></listitem>
 
       <para>The <function>gobject.main_context_default</function>() function
 returns the default gobject.MainContext object.</para>
+
+    </refsect2>
+
+    <refsect2 id="function-gobject--markup-escape-text">
+      <title>gobject.markup_escape_text</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>gobject.markup_escape_text</methodname>
+	  <methodparam><parameter>text</parameter></methodparam>
+	</methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><parameter>text</parameter>&nbsp;:</term>
+	  <listitem><simpara>the UTF-8 string to be
+escaped</simpara></listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>the escaped text</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+        <para>This function is available in PyGTK 2.8 and above.</para>
+      </note>
+
+      <para>The <function>gobject.markup_escape_text</function>() function
+escapes the string specified by <parameter>text</parameter> so that the
+markup parser will parse it verbatim. Less than, greater than, ampersand,
+etc. are replaced with the corresponding entities. This function would
+typically be used when writing out a file to be parsed with the markup
+parser.</para>
+
+      <para>Note that this function doesn't protect whitespace and line
+endings from being processed according to the XML rules for normalization of
+line endings and attribute values.</para>
 
     </refsect2>
 
