@@ -1,5 +1,7 @@
 2005-05-22  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gobject-functions.xml (markup_escape_text): Add.
+
 	* pygtk-gtkentrycompletion.xml (get_text_column): Add description.
 
 	* pygtk-gdk-functions.xml (notify_startup_complete)
